src/objects/Proyecto__c.object
<CustomObject>
    <description>Permite identificar la información de proyectos que pertenecen a cada constructora</description>
    <fields>
        <fullName>Area_promedio_de_vivienda__c</fullName>
        <label>Area promedio de vivienda</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Barrio__c</fullName>
        <label>Barrio</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cambio_de_fecha_de_entrega__c</fullName>
        <label>Cambio de fecha de entrega</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ciudad__c</fullName>
        <label>Ciudad</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consecutivo__c</fullName>
        <displayFormat>{0000}</displayFormat>
        <label>Consecutivo</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Constructora__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Constructora</label>
        <referenceTo>Constructora__c</referenceTo>
        <relationshipLabel>Proyectos</relationshipLabel>
        <relationshipName>Proyectos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Constructora_hace_seguimiento_posventa__c</fullName>
        <label>Constructora hace seguimiento posventa</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cuenta_con_acceso_a_medios_de_transporte__c</fullName>
        <label>Cuenta con acceso a medios de transporte</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Detalle_de_la_solicitud__c</fullName>
        <label>Detalle de la solicitud</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Direccion__c</fullName>
        <label>Dirección</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Duracion_de_la_obra_en_meses__c</fullName>
        <label>Duración de la obra en meses</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>El_proyecto__c</fullName>
        <label>El proyecto cuenta con zonas verdes</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>El_proyecto_cuenta_con_Admon_y_seguridad__c</fullName>
        <label>El proyecto cuenta con Admon y seguridad</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>El_proyecto_cuenta_con_vias_de_acceso__c</fullName>
        <label>El proyecto cuenta con vias de acceso</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>El_proyecto_cuenta_con_zonas_sociales__c</fullName>
        <label>El proyecto cuenta con zonas sociales</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Entidad_de_credito__c</fullName>
        <label>Entidad de crédito</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Banco Avvillas</fullName>
                </value>
                <value>
                    <fullName>Banco de Bogotá</fullName>
                </value>
                <value>
                    <fullName>Banco de Occidente</fullName>
                </value>
                <value>
                    <fullName>Bancolombia</fullName>
                </value>
                <value>
                    <fullName>Banco Popular</fullName>
                </value>
                <value>
                    <fullName>BBVA</fullName>
                </value>
                <value>
                    <fullName>Caja Social</fullName>
                </value>
                <value>
                    <fullName>Citibank</fullName>
                </value>
                <value>
                    <fullName>Colpatria</fullName>
                </value>
                <value>
                    <fullName>Corpbanca</fullName>
                </value>
                <value>
                    <fullName>Davivienda</fullName>
                </value>
                <value>
                    <fullName>FNA</fullName>
                </value>
                <value>
                    <fullName>Otros</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Equipamento_urbano__c</fullName>
        <label>Equipamento urbano</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Especificaciones_tecnicas_adjuntos__c</fullName>
        <label>Especificaciones técnicas adjuntos</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                    <default>true</default>
                    <label>Si</label>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Estado_de_aprobacion_Riegos__c</fullName>
        <label>Estado de aprobación Riegos</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Solicitud de aprobación</fullName>
                    <default>true</default>
                    <label>Solicitud de aprobación</label>
                </value>
                <value>
                    <fullName>Aprobado</fullName>
                </value>
                <value>
                    <fullName>Rechazado</fullName>
                </value>
                <value>
                    <fullName>Bloqueado</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Estrato__c</fullName>
        <label>Estrato</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Estudio_de_titularidad__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Estudio de titularidad</label>
        <referenceTo>Estudio_de_titularidad__c</referenceTo>
        <relationshipLabel>Proyectos</relationshipLabel>
        <relationshipName>Proyectos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Fecha__c</fullName>
        <label>Fecha</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fecha_inicio_de_ventas__c</fullName>
        <label>Fecha inicio de ventas</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fecha_probable_de_entrega__c</fullName>
        <label>Fecha probable de entrega</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Formato_de_solicitud_diligenciado__c</fullName>
        <label>Formato de solicitud diligenciado</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Si</fullName>
                    <default>true</default>
                    <label>Si</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Numero_de_etapas_del_proyecto__c</fullName>
        <label>Número de etapas del proyecto</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Numero_de_unidades_viable_a_financiar__c</fullName>
        <label>Número de unidades viables a financiar</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Numero_de_viviendas__c</fullName>
        <label>Número de viviendas del proyecto</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Numero_de_viviendas_no_vis__c</fullName>
        <label>Número de viviendas no vis</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Numero_de_viviendas_vendidas_a_la_fecha__c</fullName>
        <label>Número de viviendas vendidas a la fecha</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Numero_de_viviendas_vip__c</fullName>
        <label>Número de viviendas vip</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Numero_de_viviendas_vipa__c</fullName>
        <label>Número de viviendas vipa</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Numero_de_viviendas_vis__c</fullName>
        <label>Número de viviendas vis</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Observaciones__c</fullName>
        <label>Observaciones</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Parqueaderos_unidad_de_viviendas__c</fullName>
        <label>Parqueaderos unidad de viviendas</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Planos_arquitect_nicos_adjuntos__c</fullName>
        <label>Planos arquitectónicos adjuntos</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                    <default>true</default>
                    <label>Si</label>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Porcentaje_de_avance_de_la_obra__c</fullName>
        <label>Porcentaje de avance de la obra</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Posee_credito_constructor__c</fullName>
        <label>Posee crédito constructor</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Precio_promedio_vivienda__c</fullName>
        <label>Precio promedio vivienda</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Propietario__c</fullName>
        <formula>Owner:User.FirstName&amp;&quot;&quot;&amp;Owner:User.MiddleName&amp;&quot;&quot;&amp;Owner:User.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Propietario</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ritmo_de_ventas_mensual__c</fullName>
        <label>Ritmo de ventas mensual</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Solicitud_al_Gerente_Comercial__c</fullName>
        <label>Solicitud al Gerente Comercial</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Solicitud</fullName>
                </value>
                <value>
                    <fullName>Devuelta</fullName>
                </value>
                <value>
                    <fullName>Aprobado</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tipo_de_proyecto__c</fullName>
        <formula>IF(ISPICKVAL(Vivienda_no_vis__c,&quot;Si&quot;),&quot;No Vis&quot;, IF( ISPICKVAL(Vivienda_vip__c, &quot;Si&quot;) ,&quot;Vip&quot;, IF( ISPICKVAL(Vivienda_vipa__c, &quot;Si&quot;) ,&quot;Vipa&quot;, IF( ISPICKVAL(Vivienda_vis__c, &quot;Si&quot;) ,&quot;Vis&quot;, &quot;N/A&quot;))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tipo de proyecto</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tipo_de_vivienda__c</fullName>
        <label>Tipo de vivienda</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Casa</fullName>
                </value>
                <value>
                    <fullName>Apartamento</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tipologia_de_vivienda__c</fullName>
        <label>Tipología de vivienda</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Unifamiliar</fullName>
                </value>
                <value>
                    <fullName>Bifamiliar</fullName>
                </value>
                <value>
                    <fullName>Multifamiliar</fullName>
                </value>
                <value>
                    <fullName>Otro</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Valor_metro_cuadrado__c</fullName>
        <label>Valor metro cuadrado</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Vivienda_no_vis__c</fullName>
        <label>¿Vivienda no vis?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Vivienda_vip__c</fullName>
        <label>¿Vivienda vip?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Vivienda_vipa__c</fullName>
        <label>¿Vivienda vipa?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Vivienda_vis__c</fullName>
        <label>¿Vivienda vis?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Zona_con_supermercados_col_medicos__c</fullName>
        <label>Zona con supermercados/colegios/C. medic</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Zonas_comunes__c</fullName>
        <label>Zonas comunes</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <label>Proyecto</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Estado_de_aprobacion_Riegos__c</columns>
        <columns>NAME</columns>
        <columns>Constructora__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Solicitud_al_Gerente_Comercial__c</columns>
        <filterScope>Everything</filterScope>
        <label>Todos</label>
    </listViews>
    <listViews>
        <fullName>Proyectos_Rechazados</fullName>
        <columns>Consecutivo__c</columns>
        <columns>NAME</columns>
        <columns>Ciudad__c</columns>
        <columns>Propietario__c</columns>
        <columns>Estado_de_aprobacion_Riegos__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Estado_de_aprobacion_Riegos__c</field>
            <operation>equals</operation>
            <value>Rechazado</value>
        </filters>
        <label>Proyectos rechazados</label>
    </listViews>
    <listViews>
        <fullName>Proyectos_VIP</fullName>
        <columns>NAME</columns>
        <columns>Constructora__c</columns>
        <columns>Ciudad__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Propietario__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Vivienda_vip__c</field>
            <operation>equals</operation>
            <value>Si</value>
        </filters>
        <label>Proyectos VIP</label>
    </listViews>
    <listViews>
        <fullName>Proyectos_VIPA</fullName>
        <columns>NAME</columns>
        <columns>Constructora__c</columns>
        <columns>Ciudad__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Propietario__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Vivienda_vipa__c</field>
            <operation>equals</operation>
            <value>Si</value>
        </filters>
        <label>Proyectos VIPA</label>
    </listViews>
    <listViews>
        <fullName>Proyectos_VIS</fullName>
        <columns>NAME</columns>
        <columns>Constructora__c</columns>
        <columns>Ciudad__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Propietario__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Vivienda_vis__c</field>
            <operation>equals</operation>
            <value>Si</value>
        </filters>
        <label>Proyectos VIS</label>
    </listViews>
    <listViews>
        <fullName>Proyectos_aprobados</fullName>
        <columns>NAME</columns>
        <columns>Estado_de_aprobacion_Riegos__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Estado_de_aprobacion_Riegos__c</field>
            <operation>equals</operation>
            <value>Aprobado</value>
        </filters>
        <label>Proyectos aprobados</label>
    </listViews>
    <listViews>
        <fullName>Proyectos_pendientes_por_aprobar</fullName>
        <columns>Constructora__c</columns>
        <columns>NAME</columns>
        <columns>Estado_de_aprobacion_Riegos__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Ciudad__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Estado_de_aprobacion_Riegos__c</field>
            <operation>equals</operation>
            <value>Solicitud de aprobación</value>
        </filters>
        <label>Proyectos pendientes por aprobar</label>
    </listViews>
    <nameField>
        <label>Nombre de Proyecto</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Proyectos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Una_solicitud_aprobada_no_puede_ser_modi</fullName>
        <active>false</active>
        <errorConditionFormula>AND ( 
ISPICKVAL (  Estado_de_aprobacion_Riegos__c , &quot;Aprobado&quot;), 
 $UserRole.Id &lt;&gt; &quot;00eo0000000TzBZ&quot;, 
OR ( 
ISCHANGED(  Name ), 
ISCHANGED(  Constructora__c ), 
ISCHANGED(  Ciudad__c ), 
ISCHANGED(  Direccion__c ), 
ISCHANGED(  Barrio__c  ), 
ISCHANGED(  Posee_credito_constructor__c), 
ISCHANGED(  Entidad_de_credito__c ), 
ISCHANGED(  Numero_de_etapas_del_proyecto__c ), 
ISCHANGED(  Numero_de_viviendas__c  ), 
ISCHANGED(  Numero_de_viviendas_vendidas_a_la_fecha__c ), 
ISCHANGED(  Duracion_de_la_obra_en_meses__c  ), 
ISCHANGED(  Porcentaje_de_avance_de_la_obra__c ), 
ISCHANGED(  Numero_de_unidades_viable_a_financiar__c ), 
ISCHANGED(  Vivienda_vipa__c  ), 
ISCHANGED(  Vivienda_vip__c ), 
ISCHANGED(  Vivienda_vis__c ), 
ISCHANGED(  Vivienda_no_vis__c ), 
ISCHANGED(  Fecha_inicio_de_ventas__c  ), 
ISCHANGED(  Fecha_probable_de_entrega__c), 
ISCHANGED(  Ritmo_de_ventas_mensual__c ), 
ISCHANGED(  Parqueaderos_unidad_de_viviendas__c ),
ISCHANGED(  Zonas_comunes__c ),
ISCHANGED(  Equipamento_urbano__c ),
ISCHANGED(  Tipologia_de_vivienda__c ),
ISCHANGED(  Estrato__c ),
ISCHANGED(  Tipo_de_vivienda__c ),
ISCHANGED(  Area_promedio_de_vivienda__c ),
ISCHANGED(  Valor_metro_cuadrado__c ),
ISCHANGED(  Precio_promedio_vivienda__c ),
ISCHANGED(  Numero_de_viviendas_vipa__c ),
ISCHANGED(  Numero_de_viviendas_vip__c ),
ISCHANGED(  Numero_de_viviendas_vis__c ),
ISCHANGED(  Numero_de_viviendas_no_vis__c ),
ISCHANGED(  Solicitud_al_Gerente_Comercial__c),
ISCHANGED(  Estado_de_aprobacion_Riegos__c ),
ISCHANGED(  Detalle_de_la_solicitud__c ),
ISCHANGED(  Observaciones__c ),
ISCHANGED(  Constructora_hace_seguimiento_posventa__c ),
ISCHANGED(  El_proyecto__c ),
ISCHANGED(  El_proyecto_cuenta_con_zonas_sociales__c ),
ISCHANGED(  El_proyecto_cuenta_con_Admon_y_seguridad__c ),
ISCHANGED(  El_proyecto_cuenta_con_vias_de_acceso__c ),
ISCHANGED(  Cuenta_con_acceso_a_medios_de_transporte__c ),
ISCHANGED(  Zona_con_supermercados_col_medicos__c ),
ISCHANGED(  Fecha__c ),
ISCHANGED(  Formato_de_solicitud_diligenciado__c ),
ISCHANGED(  Especificaciones_tecnicas_adjuntos__c),
ISCHANGED(  Planos_arquitect_nicos_adjuntos__c )
))</errorConditionFormula>
        <errorMessage>PROY-09 Una solicitud aprobada no puede ser modificada. Solo el Vicepresidente de Riesgos puede realizar esta acción.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Valida_registro_Planos</fullName>
        <active>true</active>
        <description>Valida el registro de la sección check list documentos</description>
        <errorConditionFormula>AND( 
ISPICKVAL(  Solicitud_al_Gerente_Comercial__c, &quot;Solicitud&quot;), 

ISPICKVAL(  Formato_de_solicitud_diligenciado__c, &quot;Si&quot;), 

ISPICKVAL(  Especificaciones_tecnicas_adjuntos__c , &quot;Si&quot;), 

ISPICKVAL(  Planos_arquitect_nicos_adjuntos__c, &quot;No&quot;) 
)</errorConditionFormula>
        <errorMessage>PROY-12 No puede enviar para aprobación el proyecto si el campo planos arquitectónicos adjuntos tiene seleccionada la opción &quot;No&quot;.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Valida_registro_Planos_y_especific</fullName>
        <active>true</active>
        <description>Valida el registro de la sección check list documentos</description>
        <errorConditionFormula>AND( 
ISPICKVAL(  Solicitud_al_Gerente_Comercial__c, &quot;Solicitud&quot;), 

ISPICKVAL(  Formato_de_solicitud_diligenciado__c, &quot;Si&quot;), 

ISPICKVAL(  Especificaciones_tecnicas_adjuntos__c , &quot;No&quot;), 

ISPICKVAL(  Planos_arquitect_nicos_adjuntos__c, &quot;No&quot;) 
)</errorConditionFormula>
        <errorMessage>PROY-06 No puede enviar para aprobación el proyecto si los campos especificaciones técnicas y planos arquitectónicos tienen seleccionada la opción &quot;No&quot;.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Valida_registro_de_check_list</fullName>
        <active>true</active>
        <description>Valida el registro de la sección check list documentos</description>
        <errorConditionFormula>AND( 
ISPICKVAL(  Solicitud_al_Gerente_Comercial__c, &quot;Solicitud&quot;), 

ISPICKVAL(  Formato_de_solicitud_diligenciado__c, &quot;No&quot;), 

ISPICKVAL(  Especificaciones_tecnicas_adjuntos__c , &quot;No&quot;), 

ISPICKVAL(  Planos_arquitect_nicos_adjuntos__c, &quot;No&quot;) 
)</errorConditionFormula>
        <errorMessage>PROY-03 Antes de enviar la solicitud al Gerente Comercial , debe diligenciar los campos que se encuentran en la sección check list documentos</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Valida_registro_de_observaciones</fullName>
        <active>true</active>
        <description>Cuando el proyecto se encuentra en devuelta, se debe registrar las observaciones</description>
        <errorConditionFormula>AND (
 ISPICKVAL (  Solicitud_al_Gerente_Comercial__c , &quot;Devuelta&quot;),
  ISBLANK (  Observaciones__c ))</errorConditionFormula>
        <errorDisplayField>Observaciones__c</errorDisplayField>
        <errorMessage>PROY-02 Si el proyecto es devuelto, debe diligenciar el campo observaciones</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Valida_registro_entidad_financiera</fullName>
        <active>true</active>
        <description>Valida el registro de la entidad financiera cuando el campo posee crédito constructor dice si</description>
        <errorConditionFormula>AND (
 ISPICKVAL( Posee_credito_constructor__c , &quot;Si&quot;), 
   ISPICKVAL( Entidad_de_credito__c, &quot;&quot; ))</errorConditionFormula>
        <errorDisplayField>Entidad_de_credito__c</errorDisplayField>
        <errorMessage>PROY-01 Si el proyecto cuenta con crédito constructor, debe diligenciar la entidad de crédito</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Valida_registro_especificaciones_tecnic</fullName>
        <active>true</active>
        <description>Valida el registro de la sección check list documentos</description>
        <errorConditionFormula>AND( 
ISPICKVAL(  Solicitud_al_Gerente_Comercial__c, &quot;Solicitud&quot;), 

ISPICKVAL(  Formato_de_solicitud_diligenciado__c, &quot;Si&quot;), 

ISPICKVAL(  Especificaciones_tecnicas_adjuntos__c , &quot;No&quot;), 

ISPICKVAL(  Planos_arquitect_nicos_adjuntos__c, &quot;Si&quot;) 
)</errorConditionFormula>
        <errorMessage>PROY-10 No puede enviar para aprobación el proyecto si el campo especificaciones técnicas tiene seleccionada la opción &quot;No&quot;.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Valida_registro_formato_de_solicitud</fullName>
        <active>true</active>
        <description>Valida el registro de la sección check list documentos</description>
        <errorConditionFormula>AND( 
ISPICKVAL(  Solicitud_al_Gerente_Comercial__c, &quot;Solicitud&quot;), 

ISPICKVAL(  Formato_de_solicitud_diligenciado__c, &quot;No&quot;), 

ISPICKVAL(  Especificaciones_tecnicas_adjuntos__c , &quot;Si&quot;), 

ISPICKVAL(  Planos_arquitect_nicos_adjuntos__c, &quot;Si&quot;) 
)</errorConditionFormula>
        <errorMessage>PROY-11 No puede enviar para aprobación el proyecto si el campo formato de solicitud tiene seleccionada la opción &quot;No&quot;.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Valida_registro_formato_y_especificac</fullName>
        <active>true</active>
        <description>Valida el registro de la sección check list documentos</description>
        <errorConditionFormula>AND( 
ISPICKVAL(  Solicitud_al_Gerente_Comercial__c, &quot;Solicitud&quot;), 

ISPICKVAL(  Formato_de_solicitud_diligenciado__c, &quot;No&quot;), 

ISPICKVAL(  Especificaciones_tecnicas_adjuntos__c , &quot;No&quot;), 

ISPICKVAL(  Planos_arquitect_nicos_adjuntos__c, &quot;Si&quot;) 
)</errorConditionFormula>
        <errorMessage>PROY-08 No puede enviar para aprobación el proyecto si los campos formato de solicitud diligenciado y especificaciones técnicas adjuntas tienen seleccionada la opción &quot;No&quot;.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Valida_registro_formato_y_planos</fullName>
        <active>true</active>
        <description>Valida el registro de la sección check list documentos</description>
        <errorConditionFormula>AND( 
ISPICKVAL(  Solicitud_al_Gerente_Comercial__c, &quot;Solicitud&quot;), 

ISPICKVAL(  Formato_de_solicitud_diligenciado__c, &quot;No&quot;), 

ISPICKVAL(  Especificaciones_tecnicas_adjuntos__c , &quot;Si&quot;), 

ISPICKVAL(  Planos_arquitect_nicos_adjuntos__c, &quot;No&quot;) 
)</errorConditionFormula>
        <errorMessage>PROY-07 No puede enviar para aprobación el proyecto si los campos especificaciones formato de solicitud diligenciado y planos arquitectónicos tienen seleccionada la opción &quot;No&quot;.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Valida_registro_solicitud_al_gerente_com</fullName>
        <active>true</active>
        <description>Valida que solo el gerente comercial pueda actualizar los valores devuelta y aprobado en el campo solicitud al gerente comercial</description>
        <errorConditionFormula>AND ( 
 $Profile.Name  &lt;&gt; &quot;Gerente Comercial&quot;,

OR (
 ISPICKVAL ( Solicitud_al_Gerente_Comercial__c, &quot;Aprobada&quot;), 
 ISPICKVAL ( Solicitud_al_Gerente_Comercial__c, &quot;Devuelta&quot;)
))</errorConditionFormula>
        <errorDisplayField>Solicitud_al_Gerente_Comercial__c</errorDisplayField>
        <errorMessage>PROY-04 Con su perfil no puede aprobar o devolver solicitudes</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Valida_registro_tipo_de_vivienda</fullName>
        <active>true</active>
        <description>Valida el registro de alguna de las opciones de vivienda</description>
        <errorConditionFormula>AND (
 ISPICKVAL( Vivienda_vipa__c , &quot;No&quot;), 
 ISPICKVAL( Vivienda_vip__c , &quot;No&quot;), 
 ISPICKVAL( Vivienda_vis__c , &quot;No&quot;), 
 ISPICKVAL( Vivienda_no_vis__c , &quot;No&quot;)
)</errorConditionFormula>
        <errorMessage>PROY-05 Debe seleccionar la opción &quot;SI&quot; en alguna de las opciones de vivienda vipa, vivienda vip, vivienda vis o vivienda no vis</errorMessage>
    </validationRules>
</CustomObject>